# bitcoin

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.status  configure  libbitcoinconsensus.pc  libtool
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
db_src/common/: crypto_stub.c
db_src/include/: db_cxx.h
doc/man/: Makefile  Makefile.in
share/: setup.nsi
share/qt/: Info.plist
src/: Makefile  Makefile.in  addrdb.cpp  addrdb.h
src/.deps/: libbitcoinconsensus_la-arith_uint256.Plo  libbitcoinconsensus_la-hash.Plo  libbitcoinconsensus_la-pubkey.Plo  libbitcoinconsensus_la-uint256.Plo  libbitcoinconsensus_la-utilstrencodings.Plo
src/config/: bitcoin-config.h
src/consensus/.deps/: libbitcoinconsensus_la-merkle.Plo
src/crypto/.deps/: libbitcoin_crypto_avx2_a-sha256_avx2.Tpo  libbitcoinconsensus_la-aes.Plo  libbitcoinconsensus_la-chacha20.Plo  libbitcoinconsensus_la-hmac_sha256.Plo  libbitcoinconsensus_la-hmac_sha512.Plo  libbitcoinconsensus_la-ripemd160.Plo  libbitcoinconsensus_la-sha1.Plo  libbitcoinconsensus_la-sha256.Plo  libbitcoinconsensus_la-sha256_sse4.Plo  libbitcoinconsensus_la-sha512.Plo
src/primitives/.deps/: libbitcoinconsensus_la-block.Plo  libbitcoinconsensus_la-transaction.Plo
src/qt/: bitcoin.moc  bitcoinamountfield.moc  bitcoingui.cpp  bitcoingui.h  intro.moc  moc_addressbookpage.cpp  moc_addresstablemodel.cpp  moc_askpassphrasedialog.cpp  moc_bantablemodel.cpp  moc_bitcoinaddressvalidator.cpp  moc_bitcoinamountfield.cpp  moc_bitcoingui.cpp  moc_bitcoinunits.cpp  moc_callback.cpp  moc_clientmodel.cpp  moc_coincontroldialog.cpp  moc_coincontroltreewidget.cpp  moc_csvmodelwriter.cpp  moc_editaddressdialog.cpp  moc_guiutil.cpp  moc_intro.cpp  moc_macdockiconhandler.cpp  moc_macnotificationhandler.cpp  moc_modaloverlay.cpp  moc_notificator.cpp  moc_openuridialog.cpp  moc_optionsdialog.cpp  moc_optionsmodel.cpp  moc_overviewpage.cpp  moc_paymentserver.cpp  moc_peertablemodel.cpp  moc_qvalidatedlineedit.cpp  moc_qvaluecombobox.cpp  moc_receivecoinsdialog.cpp  moc_receiverequestdialog.cpp  moc_recentrequeststablemodel.cpp  moc_rpcconsole.cpp  moc_sendcoinsdialog.cpp  moc_sendcoinsentry.cpp  moc_signverifymessagedialog.cpp  (+16 more)
src/qt/.deps/: libbitcoinqt_a-guiutil.Tpo  libbitcoinqt_a-notificator.Tpo  libbitcoinqt_a-splashscreen.Tpo
src/qt/forms/: ui_addressbookpage.h  ui_askpassphrasedialog.h  ui_coincontroldialog.h  ui_debugwindow.h  ui_editaddressdialog.h  ui_helpmessagedialog.h  ui_intro.h  ui_modaloverlay.h  ui_openuridialog.h  ui_optionsdialog.h  ui_overviewpage.h  ui_receivecoinsdialog.h  ui_receiverequestdialog.h  ui_sendcoinsdialog.h  ui_sendcoinsentry.h  ui_signverifymessagedialog.h  ui_transactiondescdialog.h
src/qt/locale/: bitcoin_ar.qm  bitcoin_ca.qm  bitcoin_ca@valencia.qm  bitcoin_ca_ES.qm  bitcoin_cs.qm  bitcoin_da.qm  bitcoin_de.qm  bitcoin_de_DE.qm  bitcoin_el_GR.qm  bitcoin_en_GB.qm  bitcoin_es.qm  bitcoin_es_CL.qm  bitcoin_es_CO.qm  bitcoin_es_MX.qm  bitcoin_es_VE.qm  bitcoin_fa.qm  bitcoin_fi.qm  bitcoin_fr.qm  bitcoin_fr_FR.qm  bitcoin_he.qm  bitcoin_hi_IN.qm  bitcoin_hu_HU.qm  bitcoin_id.qm  bitcoin_it.qm  bitcoin_ja.qm  bitcoin_ko_KR.qm  bitcoin_nb.qm  bitcoin_nl.qm  bitcoin_pl.qm  bitcoin_pt_BR.qm  bitcoin_pt_PT.qm  bitcoin_ro.qm  bitcoin_ro_RO.qm  bitcoin_ru.qm  bitcoin_ru_RU.qm  bitcoin_sk.qm  bitcoin_sr.qm  bitcoin_sv.qm  bitcoin_tr.qm  bitcoin_tr_TR.qm  (+6 more)
src/qt/test/: moc_addressbooktests.cpp  moc_compattests.cpp  moc_paymentservertests.cpp  moc_rpcnestedtests.cpp  moc_uritests.cpp  moc_wallettests.cpp
src/script/.deps/: libbitcoinconsensus_la-bitcoinconsensus.Plo  libbitcoinconsensus_la-interpreter.Plo  libbitcoinconsensus_la-script.Plo
src/test/data/: key_io_invalid.json.h  script_tests.json.h  tx_invalid.json.h
src/wallet/: db.cpp  db.h
test/: config.ini
